# 330-problem-generator

./: README.md  dune  dune-project
.github/workflows/: build.yml  fmt.yml  main.yml
doc/: dune  index.mld
expr-generator/: dune  expr_generator.ml  expr_generator.mli  generator.ml  non_polymorphic.ml  non_polymorphic.mli  polymorphic.ml  polymorphic.mli
lambda-calc/: dune  generator.ml  generator.mli  lambda_calc.ml  parser.ml  parser.mli  type.ml
type-generator/: dune  parser.ml  parser.mli  type_generator.ml  type_generator.mli  type_intf.ml
web/: app.ml  app.mli  beta_reduction_controller.ml  beta_reduction_controller.mli  compiler.ml  compiler.mli  controller_intf.ml  dune  expr_of_type_controller.ml  indent.ml  indent.mli  type_of_expr_controller.ml
